--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,6 @@
     <title>Paw Fatale</title>
   </head>
   <body>
-    <script src="./../script/script.js"></script>
+    <script style="text/javascript" src="./../script/script.js"></script>
   </body>
 </html>
