--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,20 @@
     <title>Paw Fatale</title>
   </head>
   <body>
-    <script style="text/javascript" src="./../script/script.js"></script>
+    <section class="section-1">
+      <div>
+        <h1>P A W <br /><span>F A T A L E</span></h1>
+        <p>
+          The further you go,<br /><span>
+            <strong> more furious he gets!</strong></span
+          >
+        </p>
+      </div>
+
+      <div>
+        <canvas id="canvas"> </canvas>
+        <script style="text/javascript" src="./../script/script.js"></script>
+      </div>
+    </section>
   </body>
 </html>
