--- a/html/index.html
+++ b/html/index.html
@@ -13,15 +13,21 @@
         <h1>P A W <br /><span>F A T A L E</span></h1>
         <p>
           The further you go,<br /><span>
-            <strong> more furious he gets!</strong></span
+            <strong> more furious she gets!</strong></span
           >
         </p>
       </div>
 
       <div>
-        <canvas id="canvas"> </canvas>
-        <script style="text/javascript" src="./../script/script.js"></script>
+        <canvas id="canvas" height="700" width="500"> </canvas>
+        <script src="./../script/player.js"></script>
+        <script src="./../script/background.js"></script>
+        <script src="./../script/index.js"></script>
       </div>
     </section>
+
+    <div>
+      <button id="start-button">Start</button>
+    </div>
   </body>
 </html>
