--- a/html/index.html
+++ b/html/index.html
@@ -22,6 +22,8 @@
         <canvas id="canvas" height="700" width="500"> </canvas>
         <script src="./../script/player.js"></script>
         <script src="./../script/background.js"></script>
+        <script src="./../script/obstacles.js"></script>
+        <script src="./../script/game.js"></script>
         <script src="./../script/index.js"></script>
       </div>
     </section>
