--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,13 @@
       </div>
 
       <div>
+        <audio
+          id="start-sound"
+          src="./../sounds/mixkit-sweet-kitty-meow-93.wav"
+        ></audio>
+
         <canvas id="canvas" height="700" width="500"> </canvas>
+
         <script src="./../script/player.js"></script>
         <script src="./../script/background.js"></script>
         <script src="./../script/obstacles.js"></script>
