removed start button when game starts

--- a/html/index.html
+++ b/html/index.html
@@ -24,6 +24,11 @@
           src="./../sounds/mixkit-sweet-kitty-meow-93.wav"
         ></audio>
 
+        <audio
+          id="restart-sound"
+          src="./../sounds/mixkit-domestic-cat-hungry-meow-45.wav"
+        ></audio>
+
         <canvas id="canvas" height="700" width="500"> </canvas>
 
         <script src="./../script/player.js"></script>
@@ -36,6 +41,7 @@
 
     <div>
       <button id="start-button">Start</button>
+      <button id="restart-button">Play again</button>
     </div>
   </body>
 </html>
