--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
     <title>Paw Fatale</title>
   </head>
   <body>
+    <div id="scoreDiv">Score: <span id="score">0</span></div>
     <section class="section-1">
       <div>
         <h1>P A W <br /><span>F A T A L E</span></h1>
@@ -19,6 +20,11 @@
       </div>
 
       <div>
+        <audio
+          id="paw-hit"
+          src="./../sounds/mixkit-big-wild-cat-scary-roar-88.wav"
+        ></audio>
+
         <audio
           id="start-sound"
           src="./../sounds/mixkit-sweet-kitty-meow-93.wav"
