--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,8 @@
       </div>
 
       <div>
+        <audio id="cheese" src="./../sounds/mouse_squeak.wav"></audio>
+
         <audio
           id="paw-hit"
           src="./../sounds/mixkit-big-wild-cat-scary-roar-88.wav"
@@ -38,6 +40,7 @@
         <canvas id="canvas" height="700" width="500"> </canvas>
 
         <script src="./../script/player.js"></script>
+        <script src="./../script/cheese.js"></script>
         <script src="./../script/background.js"></script>
         <script src="./../script/obstacles.js"></script>
         <script src="./../script/game.js"></script>
