paws and hearts added

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,30 @@
     <title>Paw Fatale</title>
   </head>
   <body>
-    <div id="scoreDiv">Score: <span id="score">0</span></div>
+    <div id="scoreDiv">
+      score: <span id="score">0</span>
+      <div>
+        <img
+          id="1-heart"
+          class="lives"
+          src="./../images/heart.png"
+          alt="1st heart"
+        />
+        <img
+          id="2-heart"
+          class="lives"
+          src="./../images/heart.png"
+          alt="2nd heart"
+        />
+        <img
+          id="3-heart"
+          class="lives"
+          src="./../images/heart.png"
+          alt="3rd heart"
+        />
+      </div>
+    </div>
+
     <section class="section-1">
       <div>
         <h1>P A W <br /><span>F A T A L E</span></h1>
