--- a/html/index.html
+++ b/html/index.html
@@ -66,6 +66,7 @@
         <script src="./../script/cheese.js"></script>
         <script src="./../script/background.js"></script>
         <script src="./../script/obstacles.js"></script>
+        <script src="./../script/coffin.js"></script>
         <script src="./../script/game.js"></script>
         <script src="./../script/index.js"></script>
       </div>
