game over sound added

--- a/html/index.html
+++ b/html/index.html
@@ -60,6 +60,11 @@
           src="./../sounds/mixkit-domestic-cat-hungry-meow-45.wav"
         ></audio>
 
+        <audio
+          id="game-over"
+          src="./../sounds/mixkit-retro-arcade-game-over-470.wav"
+        ></audio>
+
         <canvas id="canvas" height="700" width="500"> </canvas>
 
         <script src="./../script/player.js"></script>
