--- a/html/index.html
+++ b/html/index.html
@@ -40,6 +40,7 @@
             <strong> more furious she gets!</strong></span
           >
         </p>
+        <button id="instruction-button">Instructions</button>
       </div>
 
       <div id="game-board">
@@ -85,7 +86,7 @@
       <img
         id="gameOver-image"
         src="./../images/gameOver.png"
-        alt="gameoverImage"
+        alt="coffin image"
       />
     </section>
 
