--- a/html/index.html
+++ b/html/index.html
@@ -41,6 +41,17 @@
           >
         </p>
         <button id="instruction-button">Instructions</button>
+        <ul id="instructions">
+          <li class="points">Avoid the paws,</li>
+          <br />
+          <li class="points">Get the cheese,</li>
+          <br />
+          <li class="points">Only 3 lives,</li>
+          <br />
+          <li class="points">
+            Most importantly, <span><b>don't die!</b></span>
+          </li>
+        </ul>
       </div>
 
       <div id="game-board">
