--- a/html/index.html
+++ b/html/index.html
@@ -73,7 +73,7 @@
         ></audio>
 
         <audio
-          id="restart-sound"
+          id="instructions-sound"
           src="./../sounds/mixkit-domestic-cat-hungry-meow-45.wav"
         ></audio>
 
