--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./../stylesheet/style.css" />
+    <link rel="stylesheet" href="./stylesheet/style.css" />
     <title>Paw Fatale</title>
   </head>
   <body>
@@ -14,19 +14,19 @@
         <img
           id="1-heart"
           class="lives"
-          src="./../images/heart.png"
+          src="./images/heart.png"
           alt="1st heart"
         />
         <img
           id="2-heart"
           class="lives"
-          src="./../images/heart.png"
+          src="./images/heart.png"
           alt="2nd heart"
         />
         <img
           id="3-heart"
           class="lives"
-          src="./../images/heart.png"
+          src="./images/heart.png"
           alt="3rd heart"
         />
       </div>
@@ -57,47 +57,43 @@
       <div id="game-board">
         <audio
           id="game-theme"
-          src="./../sounds/8bit-good-the-bad-and-the-ugly.mp3"
+          src="./sounds/8bit-good-the-bad-and-the-ugly.mp3"
         ></audio>
 
-        <audio id="cheese" src="./../sounds/mouse_squeak.wav"></audio>
+        <audio id="cheese" src="./sounds/mouse_squeak.wav"></audio>
 
         <audio
           id="paw-hit"
-          src="./../sounds/mixkit-big-wild-cat-scary-roar-88.wav"
+          src="./sounds/mixkit-big-wild-cat-scary-roar-88.wav"
         ></audio>
 
         <audio
           id="start-sound"
-          src="./../sounds/mixkit-sweet-kitty-meow-93.wav"
+          src="./sounds/mixkit-sweet-kitty-meow-93.wav"
         ></audio>
 
         <audio
           id="instructions-sound"
-          src="./../sounds/mixkit-domestic-cat-hungry-meow-45.wav"
+          src="./sounds/mixkit-domestic-cat-hungry-meow-45.wav"
         ></audio>
 
         <audio
           id="game-over"
-          src="./../sounds/mixkit-retro-arcade-game-over-470.wav"
+          src="./sounds/mixkit-retro-arcade-game-over-470.wav"
         ></audio>
 
         <canvas id="canvas" height="700" width="500"> </canvas>
 
-        <script src="./../script/player.js"></script>
-        <script src="./../script/cheese.js"></script>
-        <script src="./../script/background.js"></script>
-        <script src="./../script/obstacles.js"></script>
-        <script src="./../script/game.js"></script>
-        <script src="./../script/index.js"></script>
+        <script src="./script/player.js"></script>
+        <script src="./script/cheese.js"></script>
+        <script src="./script/background.js"></script>
+        <script src="./script/obstacles.js"></script>
+        <script src="./script/game.js"></script>
+        <script src="./script/index.js"></script>
       </div>
 
       <h2 id="game-over-text">You got<span> PAWED!!!</span></h2>
-      <img
-        id="gameOver-image"
-        src="./../images/gameOver.png"
-        alt="coffin image"
-      />
+      <img id="gameOver-image" src="./images/gameOver.png" alt="coffin image" />
     </section>
 
     <div>
